Font why yuo no load

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,3 +1,45 @@
-/* ==========
-  Footer module styles
-========== */
+/*  Footer module styles
+==================================================================== */
+
+footer {
+  background-color: #444;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 4rem 0;
+}
+footer p {
+  color: #ddd;
+  font-size: 1.4rem;
+}
+
+.contact {
+  grid-column: 2 / 7;
+}
+.contact ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0;
+  margin: 0;
+}
+.contact li {
+  margin-inline-end: 4rem;
+}
+.contact a {
+  font-size: 1.85rem;
+  color: #ddd;
+  transition: color 0.3s ease;
+}
+.contact a:hover,
+.contact a:focus {
+  color: #fff;
+}
+.colophon {
+  grid-column: 7 / 11;
+}
+.copyright {
+  grid-column: 11 / -2;
+  text-align: right;
+}
