--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,3 +1,8 @@
 /* Layout module styles
 ========================================================================== */
 
+.main {
+  position: relative;
+  z-index: 1;
+  background-color: #fff;
+}
