--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,28 @@
-/* ==========
-  Header module styles
-========== */
+/* Header module styles
+========================================================================= */
+
+.siteName {
+  grid-column: 2 / 6;
+  font-family: $font-body-regular;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  letter-spacing: -0.025rem;
+  margin-top: 0;
+}
+.siteName a {
+  color: #000;
+  text-decoration-color: transparent;
+  transition: text-decoration-color 0.3s ease;
+}
+.siteName a:focus,
+.siteName a:hover {
+  text-decoration-color: #000;
+}
+
+.siteHeader {
+  padding: 3rem 0;
+  background-color: white;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
