--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 /* Global variables
 ========================================================================== */
 
-// $font-heading-regular: 'LyonDisplay Regular';
-// etc, etc
+$font-heading: 'Alfa Slab One Regular', serif;
+$font-body-regular: 'Roboto', sans-serif;
+$font-body-bold: 'Roboto bold', sans-serif;
