--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -36,10 +36,20 @@ footer p {
 .contact a:focus {
   color: #fff;
 }
-.colophon {
-  grid-column: 7 / 11;
-}
+.colophon,
 .copyright {
-  grid-column: 11 / -2;
-  text-align: right;
+  grid-column: 7 / -2;
+}
+.colophon a {
+  color: #ddd;
+}
+.colophon a:hover,
+.colophon a:focus {
+  color: #fff;
+}
+.colophon p:last-of-type {
+  margin-bottom: 0;
+}
+.copyright p {
+  margin-top: 0;
 }
