--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,28 +1,6 @@
 /* Global Typography styles
 ========================================================================== */
 
-@font-face {
-  font-family: 'Alfa Slab One';
-  font-style: normal;
-  font-display: swap;
-  src: local('AlfaSlabOne-Regular'), local('Alfa Slab One Regular')  
-    url('../assets/fonts/AlfaSlabOne-Regular.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-display: swap;
-  src: local('Roboto-Regular'), local('Roboto Regular')
-    url('../assets/fonts/Roboto-Regular.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Roboto Bold';
-  font-style: bold;
-  font-display: swap;
-  src: local('Roboto-Bold'), local('Roboto Bold')
-    url('../assets/fonts/Roboto-Bold.ttf') format('ttf');
-}
-
 html {
   font-size: 62.5%; // 1rem = 10px, 3.5rem = 35px;
 }
@@ -35,32 +13,5 @@ body {
 }
 
 h2 {
-  font-family: $font-heading;
-}
-
-.fancyTitle {
-  font-family: $font-heading;
-  margin-left: -1rem;
-  margin-top: 0;
-  font-size: 18vw;
-  color: rgba(33, 95, 107, 0.7);
-  letter-spacing: -0.25em;
-  line-height: 0.75;
-  word-break: break-all;
-  word-spacing: 0.35em;
-}
-.fancyTitle span:nth-of-type(2n + 3) {
-  color: rgba(160, 75, 73, 0.7);
-}
-.fancyTitle span:nth-of-type(3n + 2) {
-  color: rgba(79, 139, 93, 0.7);
-}
-.fancyTitle span:nth-of-type(5n + 3) {
-  color: rgba(130, 116, 71, 0.7);
-}
-
-@media (min-width: 1200px) {
-  .fancyTitle {
-    font-size: 22rem;
-  }
+  font-family: $font-body-regular;
 }
