--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 /* Global variables
 ========================================================================== */
 
-$font-heading: 'Alfa Slab One Regular', serif;
+$font-heading: 'Ultra', serif;
 $font-body-regular: 'Roboto', sans-serif;
 $font-body-bold: 'Roboto bold', sans-serif;
