--- a/src/components/Splash/Splash.module.scss
+++ b/src/components/Splash/Splash.module.scss
@@ -10,3 +10,16 @@
   grid-column: 7 / -2;
   padding: 4rem 0;
 }
+
+.tagList {
+  display: flex;
+  flex-wrap: wrap;
+}
+.tagList li {
+  margin-inline-end: 1.8rem;
+  margin-bottom: 1.8rem;
+  padding: 1rem 2rem;
+  background: #666;
+  color: #fff;
+  border-radius: 6px;
+}
