Contentful data type changes, consolidated index GQL queries, small CSS tweaks

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,3 +46,11 @@ ol {
   max-width: 1200px;
   margin: 0 auto;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+section {
+  min-height: calc(100vh - 7rem);
+}
