--- a/src/components/Splash/Splash.module.scss
+++ b/src/components/Splash/Splash.module.scss
@@ -1,6 +1,10 @@
 /* Index Page Hero module styles
 ========================================================================== */
-
+.splashSection {
+  padding-top: 7rem;
+  background-color: #fff;
+  min-height: 100vh;
+}
 .indexTitleBlock {
   grid-column: 2 / 7;
   padding-top: 2rem;
@@ -16,10 +20,8 @@
   flex-wrap: wrap;
 }
 .tagList li {
-  margin-inline-end: 1.8rem;
+  margin-inline-end: 2.4rem;
   margin-bottom: 1.8rem;
-  padding: 1rem 2rem;
-  background: #666;
-  color: #fff;
-  border-radius: 6px;
+  padding: 0.25rem 0.5rem;
+  border-left: 1px solid black;
 }
