--- a/src/components/ProjectCard/ProjectCard.module.scss
+++ b/src/components/ProjectCard/ProjectCard.module.scss
@@ -9,22 +9,29 @@
 }
 
 .thumbnail {
-  background-color: #aaa;
-  max-height: 16rem;
-  margin-top: 5.2rem;
+  margin-top: 0.5rem;
+}
+.thumbnail img {
+  width: 100%;
 }
 
 .projectCard h4 {
   margin-top: 0;
+  padding-bottom: 0.5rem;
+  grid-column: 1 / -1;
+  border-bottom: 1px solid black;
 }
-.projectCard p a {
+.projectContent a {
   color: black;
   font-family: $font-body-bold;
   font-weight: 700;
-  text-decoration-color: rgba(0, 0, 0, 0.2);
+  text-decoration-color: rgba(0, 0, 0, 0.3);
   transition: text-decoration-color 0.3s ease;
 }
-.projectCard p a:hover,
-.projectCard p a:focus {
+.projectContent a:hover,
+.projectContent a:focus {
   text-decoration-color: rgba(0, 0, 0, 1);
+}
+.projectContent p:first-of-type {
+  margin-top: 0;
 }
