--- a/src/components/ProjectSection/ProjectSection.module.scss
+++ b/src/components/ProjectSection/ProjectSection.module.scss
@@ -1,7 +1,9 @@
 /* Index Page Projects module styles
 ========================================================================== */
-section {
-  scroll-margin-top: 8rem;
+.projectSection {
+  padding-top: 7rem;
+  min-height: 100vh;
+  background-color: white;
 }
 
 .indexTitleBlock {
@@ -18,3 +20,14 @@ section {
   margin-top: 3.6rem;
 }
 
+.indexContentBlock a {
+  color: black;
+  font-family: $font-body-bold;
+  font-weight: 700;
+  text-decoration-color: rgba(0, 0, 0, 0.3);
+  transition: text-decoration-color 0.3s ease;
+}
+.indexContentBlock a:hover,
+.indexContentBlock a:focus {
+  text-decoration-color: rgba(0, 0, 0, 1);
+}
