--- a/src/templates/blogPost.module.scss
+++ b/src/templates/blogPost.module.scss
@@ -7,3 +7,12 @@
   grid-column: 7 / -2;
   padding: 4rem 0;
 }
+.contentBlock a {
+  color: black;
+  text-decoration-color: rgba(0, 0, 0, 0.3);
+  transition: text-decoration-color 0.3s ease;
+}
+.contentBlock a:hover,
+.contentBlock a:focus {
+  text-decoration-color: rgba(0, 0, 0, 1);
+}
