Mobile css started

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -53,3 +53,11 @@ footer p {
 .copyright p {
   margin-top: 0;
 }
+
+@media (max-width: 675px) {
+  .contact,
+  .colophon,
+  .copyright {
+    grid-column: 2 / -2;
+  }
+}
