--- a/src/components/FancyText/FancyText.module.scss
+++ b/src/components/FancyText/FancyText.module.scss
@@ -27,3 +27,10 @@
     font-size: 17.9rem;
   }
 }
+
+@media (max-width: 768px) {
+  .fancyTitle {
+    font-size: 26vw;
+    line-height: 0.65;
+  }
+}
