--- a/src/components/WritingSection/WritingSection.module.scss
+++ b/src/components/WritingSection/WritingSection.module.scss
@@ -30,3 +30,29 @@
 .indexContentBlock a:focus {
   text-decoration-color: rgba(0, 0, 0, 1);
 }
+
+@media (max-width: 768px) {
+  .writingSection {
+    padding-top: 7rem;
+  }
+  
+  .indexTitleBlock {
+    grid-column: 2 / 9;
+    grid-row: 1 / 2;
+    opacity: 0.2;
+  }
+  .indexContentBlock {
+    grid-column: 4 / -2;
+    grid-row: 1 / 2;
+    padding-top: 0;
+  }
+}
+
+@media (max-width: 505px) {
+  .indexTitleBlock {
+    display: none;
+  }
+  .indexContentBlock {
+    grid-column: 2 / -2;
+  }
+}
