--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -12,6 +12,27 @@ body {
   letter-spacing: -0.025rem;
 }
 
-h2 {
+h2, h3 {
   font-family: $font-body-regular;
+}
+
+@media (max-width: 505px) {
+  h3 {
+    font-family: $font-heading;
+    font-size: 6.2rem;
+    line-height: 0.9;
+    letter-spacing: -0.05rem;
+  }
+}
+@media (max-width: 400px) {
+  h3 {
+    font-family: $font-heading;
+    font-size: 5.6rem;
+  }
+}
+@media (max-width: 360px) {
+  h3 {
+    font-family: $font-heading;
+    font-size: 4.8rem;
+  }
 }
