--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -24,8 +24,9 @@
 }
 .mainNav a:hover,
 .mainNav a:focus {
-  color: black;
-  text-decoration-color: black;
+  // color: black;
+  color: rgb(227, 99, 2);
+  text-decoration-color: rgb(227, 99, 2);
 }
 
 @media (max-width: 768px) {
