--- a/src/components/Splash/Splash.module.scss
+++ b/src/components/Splash/Splash.module.scss
@@ -22,8 +22,8 @@
 .tagList li {
   margin-inline-end: 2.4rem;
   margin-bottom: 1.8rem;
-  padding: 0.25rem 0.5rem;
-  border-left: 1px solid black;
+  padding: 0.15rem 0.5rem;
+  border-left: 2px solid $highlight;
 }
 
 @media (max-width: 768px) {
