--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,5 @@
 $font-heading: 'Ultra', serif;
 $font-body-regular: 'Roboto', sans-serif;
 $font-body-bold: 'Roboto bold', sans-serif;
+
+$highlight: rgb(227, 99, 2);
