--- a/src/templates/singleProject.module.scss
+++ b/src/templates/singleProject.module.scss
@@ -12,12 +12,13 @@
   border-bottom: 1px solid black;
 }
 .contentBlock a {
-  color: black;
-  text-decoration-color: rgba(0, 0, 0, 0.3);
-  transition: text-decoration-color 0.3s ease;
+  color: $highlight;
+  text-decoration-color: $highlight;
+  transition: text-decoration-color 0.3s ease, color 0.3s ease;
 }
 .contentBlock a:hover,
 .contentBlock a:focus {
+  color: black;
   text-decoration-color: rgba(0, 0, 0, 1);
 }
 
@@ -28,13 +29,14 @@
   margin-inline-end: 6rem;
 }
 .linkBlock a {
-  color: black;
+  color: $highlight;
   font-family: $font-body-bold;
   font-weight: 700;
-  text-decoration-color: rgba(0, 0, 0, 0.3);
-  transition: text-decoration-color 0.3s ease;
+  text-decoration-color: $highlight;
+  transition: text-decoration-color 0.3s ease, color 0.3s ease;
 }
 .linkBlock a:hover,
 .linkBlock a:focus {
+  color: black;
   text-decoration-color: rgba(0, 0, 0, 1);
 }
