--- a/src/components/Splash/Splash.module.scss
+++ b/src/components/Splash/Splash.module.scss
@@ -34,12 +34,22 @@
   .indexTitleBlock {
     grid-column: 2 / 10;
     grid-row: 1 / 2;
-    opacity: 0.2;
+    opacity: 0.1;
+    padding-top: 10rem;
   }
   .indexContentBlock {
     grid-column: 4 / -2;
     grid-row: 1 / 2;
     padding-top: 0;
+  }
+  .title {
+    font-family: $font-heading;
+    font-size: 6.2rem;
+    line-height: 0.9;
+    letter-spacing: -0.25rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid black;
+    margin: 4rem 0 2rem;
   }
 }
 
@@ -50,5 +60,17 @@
   .indexContentBlock {
     grid-column: 2 / -2;
     padding-top: 0;
+  }
+}
+@media (max-width: 400px) {
+  .title {
+    font-family: $font-heading;
+    font-size: 5.6rem;
+  }
+}
+@media (max-width: 360px) {
+  .title {
+    font-family: $font-heading;
+    font-size: 4.8rem;
   }
 }
