--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -13,25 +13,25 @@ body {
 }
 
 h2, h3 {
-  font-family: $font-body-regular;
+  font-family: $font-body-bold;
 }
 
 @media (max-width: 505px) {
-  h3 {
+  .sectionHeader {
     font-family: $font-heading;
     font-size: 6.2rem;
     line-height: 0.9;
-    letter-spacing: -0.05rem;
+    letter-spacing: -0.25rem;
   }
 }
 @media (max-width: 400px) {
-  h3 {
+  .sectionHeader {
     font-family: $font-heading;
     font-size: 5.6rem;
   }
 }
 @media (max-width: 360px) {
-  h3 {
+  .sectionHeader {
     font-family: $font-heading;
     font-size: 4.8rem;
   }
