--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -52,6 +52,11 @@ ol {
   min-height: 100vh;
 }
 
+main {
+  background-color: $background !important;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%2329766f' fill-opacity='0.2' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
 @media (max-width: 505px) {
   .gridWrapper {
     grid-template-columns: 4% repeat(6, 1fr), 4%;
