--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -16,6 +16,16 @@ h2, h3 {
   font-family: $font-body-bold;
 }
 
+.title {
+  font-family: $font-heading;
+  font-size: 6.2rem;
+  line-height: 0.9;
+  letter-spacing: -0.015rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid black;
+  margin: 4rem 0 2rem;
+}
+
 @media (max-width: 505px) {
   .sectionHeader {
     font-family: $font-heading;
@@ -25,13 +35,15 @@ h2, h3 {
   }
 }
 @media (max-width: 400px) {
-  .sectionHeader {
+  .sectionHeader, 
+  .title {
     font-family: $font-heading;
     font-size: 5.6rem;
   }
 }
 @media (max-width: 360px) {
-  .sectionHeader {
+  .sectionHeader,
+  .title {
     font-family: $font-heading;
     font-size: 4.8rem;
   }
