--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,4 +5,5 @@ $font-heading: 'Ultra', serif;
 $font-body-regular: 'Roboto', sans-serif;
 $font-body-bold: 'Roboto bold', sans-serif;
 
-$highlight: rgb(227, 99, 2);
+$highlight: rgb(199, 31, 1);
+$background: rgb(247, 237, 223);
