--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 ==================================================================== */
 
 footer {
-  background-color: #444;
+  background-color: rgb(38, 27, 26);
   position: sticky;
   z-index: 0;
   bottom: 0;
@@ -11,7 +11,7 @@ footer {
   padding: 4rem 0;
 }
 footer p {
-  color: #ddd;
+  color: $background;
   font-size: 1.4rem;
 }
 
@@ -30,7 +30,7 @@ footer p {
 }
 .contact a {
   font-size: 1.85rem;
-  color: #ddd;
+  color: $background;
   transition: color 0.3s ease;
 }
 .contact a:hover,
@@ -42,7 +42,7 @@ footer p {
   grid-column: 7 / -2;
 }
 .colophon a {
-  color: #ddd;
+  color: $background;
 }
 .colophon a:hover,
 .colophon a:focus {
