--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -24,9 +24,8 @@
 }
 .mainNav a:hover,
 .mainNav a:focus {
-  // color: black;
-  color: rgb(227, 99, 2);
-  text-decoration-color: rgb(227, 99, 2);
+  color: $highlight;
+  text-decoration-color: $highlight;
 }
 
 @media (max-width: 768px) {
