--- a/src/components/WritingSection/WritingSection.module.scss
+++ b/src/components/WritingSection/WritingSection.module.scss
@@ -2,7 +2,7 @@
 ========================================================================== */
 .writingSection {
   padding-top: 8rem;
-  background-color: white;
+  min-height: 100vh;
 }
 
 .indexTitleBlock {
@@ -48,15 +48,6 @@
     grid-row: 1 / 2;
     padding-top: 0;
   }
-  .title {
-    font-family: $font-heading;
-    font-size: 6.2rem;
-    line-height: 0.9;
-    letter-spacing: -0.25rem;
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid black;
-    margin: 4rem 0 2rem;
-  }
 }
 
 @media (max-width: 505px) {
@@ -65,17 +56,5 @@
   }
   .indexContentBlock {
     grid-column: 2 / -2;
-  }
-}
-@media (max-width: 400px) {
-  .title {
-    font-family: $font-heading;
-    font-size: 5.6rem;
-  }
-}
-@media (max-width: 360px) {
-  .title {
-    font-family: $font-heading;
-    font-size: 4.8rem;
   }
 }
